# eleven-barrage-grab

./: .gitignore  BUILD.md  Cargo.toml  README.md  config.example.toml  config.toml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/collector/: Cargo.toml
crates/collector/src/: browser.rs  error.rs  fetch_consumer.rs  im_fetch.rs  lib.rs  pool.rs  signer.rs  url_parser.rs
crates/collector/src/cdp/: client.rs  commands.rs  error.rs  frame.rs  mock.rs  mod.rs
crates/core/: Cargo.toml
crates/core/src/: decoder.rs  dedup.rs  dispatcher.rs  error.rs  event.rs  filter.rs  lib.rs  resilience.rs  session.rs
crates/core/tests/: fixtures.rs  integration.rs
crates/proto/: Cargo.toml  build.rs
crates/proto/proto/: messages.proto  signed.proto  wss.proto
crates/proto/src/: lib.rs
crates/service/: Cargo.toml  build.rs
crates/service/proto/: barrage.proto  signed.proto
crates/service/src/: api.rs  collector_spawn.rs  config.rs  dynamic_room.rs  fetch.rs  grpc_server.rs  grpc_signed.rs  lib.rs  logging.rs  main.rs  metrics.rs  rest_server.rs  room.rs  run.rs  signer.rs  watchdog.rs  ws_path.rs  ws_server.rs  wss.rs
crates/service/src/api/: health.rs  mod.rs  rooms.rs  sign.rs
crates/service/tests/: auto_sign_e2e.rs
devflow/auto-sign-fetcher/: design.md  requirements.md  state.json  tasks.md  test-cases.md  verification-log.md
devflow/custom-barrage/: README.md  design.md  requirements.md  state.json  tasks.md  test-cases.md
devflow/dynamic-room-subscription/: design.md  requirements.md  state.json  test-cases.md  verification-log.md
devflow/url-fetch-consumer/: design.md  requirements.md  state.json  tasks.md  test-cases.md  verification-log.md
docs/superpowers/plans/: 2026-06-28-browser-signer-plan.md
docs/superpowers/specs/: 2026-06-28-browser-signer-design.md
examples/: grpc_client.py  python_client.py
