[workspace]
resolver = "2"
members = [
    "crates/proto",
    "crates/core",
    "crates/collector",
    "crates/service",
    "crates/cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
license = "MIT OR Apache-2.0"
repository = "https://github.com/eleven-marketplace/eleven-barrage-grab"

[workspace.dependencies]
# 异步运行时
tokio = { version = "1.36", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
async-trait = "0.1"

# WebSocket
tokio-tungstenite = { version = "0.23", features = ["connect", "native-tls-vendored"] }
tungstenite = "0.23"

# gRPC
tonic = { version = "0.11", features = ["transport"] }
prost = "0.12"
prost-types = "0.12"

# HTTP
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 错误处理
thiserror = "1.0"
anyhow = "1.0"

# 日志与追踪
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }

# Metrics
metrics = "0.22"
metrics-exporter-prometheus = { version = "0.14", features = ["http-listener"] }

# 配置
toml = "0.8"

# 实用
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
bytes = "1.5"
uuid = { version = "1.8", features = ["v4", "serde"] }
flate2 = "1.0"

# CLI
clap = { version = "4.5", features = ["derive"] }

# 测试
criterion = { version = "0.5", features = ["html_reports"] }
mockall = "0.12"

# 内部 crate
eleven-barrage-proto = { path = "crates/proto" }
eleven-barrage-core = { path = "crates/core" }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
debug = false

[profile.release-with-debug]
inherits = "release"
strip = false
debug = true

# Patch
[patch.crates-io]
# 可在此添加 git 依赖覆盖