[package]
name = "eleven-barrage-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "CLI entry point (thin wrapper around eleven-barrage-service)"

[[bin]]
name = "ebg"
path = "src/main.rs"

[dependencies]
eleven-barrage-service = { path = "../service" }
eleven-barrage-collector = { path = "../collector" }
eleven-barrage-core = { path = "../core" }
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
clap.workspace = true
futures.workspace = true
tokio-tungstenite.workspace = true
tonic.workspace = true
reqwest.workspace = true
serde_json.workspace = true