[package]
name = "eleven-barrage-collector"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Collector subcommand: extracts signed wss URL/headers (MVP placeholder)"

[dependencies]
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
url.workspace = true
reqwest.workspace = true