[package]
name = "eleven-barrage-proto"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Protobuf schema for Douyin barrage protocol"

[dependencies]
prost.workspace = true
serde.workspace = true

[build-dependencies]
prost-build = "0.12"